# specs/contract.openapi.yaml
@@ -20,9 +20,224 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserProfile"
+  /v1/flight:
+    get:
+      tags:
+        - flight
+      operationId: getFlightList
+      summary: Получение списка рейсов
+      description: Получение списка прямых рейсов по дате вылета и дате прилета, типу билета, наличию багажа
+      parameters:
+        - in: query
+          name: from
+          schema:
+            type: string
+          description: 'Откуда'
+        - in: query
+          name: to
+          schema:
+            type: string
+          description: 'Куда'
+        - in: query
+          name: dateStart
+          schema:
+            type: string
+          description: 'Дата вылета от. Пример: 30-12-2022'
+        - in: query
+          name: dateEnd
+          schema:
+            type: string
+          description: 'Дата вылета от. Пример: 31-12-2022'
+        - in: query
+          name: type
+          schema:
+            type: string
+          description: 'Тип билета business|economy'
+        - in: query
+          name: hasLuggage
+          schema:
+            type: string
+          description: 'С багажом 1 - да, 0 - нет'
+      responses:
+        '200':
+          description: Успешный ответ.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FlightItem'
+  /v1/flight/{id}:
+    get:
+      tags:
+        - flight
+      operationId: getFlightById
+      summary: Получение информации по рейсу
+      description: Просмотр информации о том или ином рейсе (наличие багажа, ручной клади, возврат билета и тд)
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+            format: uuid
+          description: Id рейса
+      responses:
+        '200':
+          description: Успешный ответ.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Flight'
 
+  /v1/order:
+    post:
+      tags:
+        - order
+      operationId: orderTicket
+      summary: Заказ билета на рейс
+      description: Заказ билета на рейс
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateOrderRequest'
+      responses:
+        '200':
+          description: Успешный ответ.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+
+  /v1/registration:
+    post:
+      tags:
+        - registration
+      operationId: registration
+      summary: Регистрация на рейс
+      description: Регистрация на рейс
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegistrationRequest'
+      responses:
+        '204':
+          description: Успешная регистрация
+        '400':
+          description: Регистрация не доступна
 components:
   schemas:
+    FlightItem:
+      type: object
+      required:
+        - id
+        - number
+        - from
+        - to
+        - departureDateTime
+        - arrivalDateTime
+        - type
+        - hasLuggage
+        - ticketsCount
+      properties:
+        id:
+          type: string
+          description: Идентификатор рейса
+          format: uuid
+        number:
+          type: string
+          description: Номер рейса
+          example: T104
+        from:
+          type: string
+          description: Откуда
+          example: Внуково
+        to:
+          type: string
+          description: Куда
+          example: Домодедово
+        departureDateTime:
+          type: string
+          description: Дата и время вылета
+          example: '12:00 11-11-2022'
+        arrivalDateTime:
+          type: string
+          description: Дата и время прилета
+          example: '12:01 11-11-2022'
+        type:
+          type: string
+          description: Тип билета business|economy
+          example: business
+        hasLuggage:
+          type: boolean
+          description: Есть ли багаж
+          example: true
+        ticketsCount:
+          type: integer
+          description: Количество свободных билетов
+          example: 3
+    Flight:
+      allOf:
+        - $ref: '#/components/schemas/FlightItem'
+        - type: object
+          required:
+            - canReturn
+          properties:
+            canReturn:
+              type: boolean
+              description: Можно ли вернуть
+              example: true
+    CreateOrderRequest:
+      type: object
+      required:
+        - firstName
+        - lastName
+        - flightId
+      properties:
+        firstName:
+          type: string
+          description: Имя пассажира
+          example: Test
+        lastName:
+          type: string
+          description: Фамилия пассажира
+          example: Testov
+        flightId:
+          type: string
+          description: Идентификатор рейса
+          format: uuid
+    Order:
+      type: object
+      required:
+        - id
+        - paymentLink
+        - status
+      properties:
+        id:
+          type: string
+          description: Идентификатор заказа
+          format: uuid
+        paymentLink:
+          type: string
+          description: Ссылка на оплату
+          example: 'https://pleasepay.me'
+        status:
+          type: string
+          description: Статус заказа booked|paid|canceled
+          example: booked
+    RegistrationRequest:
+      type: object
+      required:
+        - ticketId
+      properties:
+        ticketId:
+          type: string
+          description: Идентификатор билета
+          format: uuid
     UserProfile:
       type: object
       required:
